--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ axum-server = "0.7"
 clap = { version = "4.5", features = ["derive"] }
 futures = "0.3"
 http = "1.1"
+hyper = "1.4"
 log = "0.4"
 prometheus = "0.13"
 prost = { version = "0.13", optional = true }
