--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ homepage = "https://github.com/vandry/comprehensive"
 description = "A harness for creating consistently-shaped servers will less boilerplate"
 license = "MIT"
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [dependencies]
 arc-swap = { version = "1.7", optional = true }
 async-trait = "0.1"
