--- a/comprehensive_macros/Cargo.toml
+++ b/comprehensive_macros/Cargo.toml
@@ -7,6 +7,10 @@ homepage = "https://github.com/vandry/comprehensive"
 description = "A harness for creating consistently-shaped servers will less boilerplate"
 license = "MIT"
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [lib]
 proc-macro = true
 
