--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
 
 [package]
 name = "comprehensive"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -26,12 +26,14 @@ async-trait = "0.1"
 atomic-take = "1.1"
 axum = "0.7"
 axum-server = "0.7"
+boxcar = "0.2"
 clap = { version = "4.5", features = ["derive"] }
 comprehensive_macros = { path = "comprehensive_macros", version = "=0.4.0" }
 downcast-rs = "1.2"
 futures = "0.3"
 http = "1.1"
 hyper = "1.4"
+lazy_static = "1.5"
 log = "0.4"
 prometheus = "0.13"
 rustls-pemfile = { version = "2.1", optional = true }
