--- a/comprehensive_grpc/Cargo.toml
+++ b/comprehensive_grpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_grpc"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -12,8 +12,9 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
+atomic-take = "1.1"
 clap = { version = "4.5", features = ["derive"] }
-comprehensive = { path = "..", version = "=0.4.0" }
+comprehensive = { path = "..", version = "=0.5.0" }
 comprehensive_macros = { path = "../comprehensive_macros", version = "=0.4.0" }
 const_format = "0.2"
 futures = "0.3"
