--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ axum = "0.7"
 axum-server = "0.7"
 boxcar = "0.2"
 clap = { version = "4.5", features = ["derive"] }
-comprehensive_macros = { path = "comprehensive_macros", version = "=0.4.0" }
+comprehensive_macros = { path = "comprehensive_macros", version = "0.4" }
 downcast-rs = "1.2"
 futures = "0.3"
 http = "1.1"
