--- a/comprehensive_macros/Cargo.toml
+++ b/comprehensive_macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_macros"
-version = "0.4.0"
+version = "0.4.1"
 edition = "2021"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -15,6 +15,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 proc-macro = true
 
 [dependencies]
+convert_case = "0.7"
 proc-macro2 = "1.0"
 quote = "1.0"
 syn = "2.0"
