--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -9,11 +9,16 @@ version = "0.1.0"
 name = "helloworld-grpc-server"
 path = "src/helloworld-grpc-server.rs"
 
+[[bin]]
+name = "helloworld-grpc-client"
+path = "src/helloworld-grpc-client.rs"
+
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 comprehensive = { path = "..", version = "0.5", features = ["tls"] }
 comprehensive_grpc = { path = "../comprehensive_grpc", version = "0.5", features = ["tls"] }
 env_logger = "0.10"
+humantime = "2.1"
 prost = "0.13"
 tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
 tokio-rustls = "0.26"
