--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ members = [
 
 [package]
 name = "comprehensive"
-version = "0.5.3"
+version = "0.5.4"
 edition = "2021"
+rust-version = "1.86"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
 description = "A harness for creating consistently-shaped servers will less boilerplate"
@@ -24,24 +25,26 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 arc-swap = { version = "1.7", optional = true }
-async-trait = "0.1"
 atomic-take = "1.1"
 axum = "0.7"
 axum-server = "0.7"
 boxcar = "0.2"
 clap = { version = "4.5", features = ["derive"] }
 comprehensive_macros = { path = "comprehensive_macros", version = "0.4" }
-downcast-rs = "1.2"
+fixedbitset = "0.5.7"
 futures = "0.3"
 http = "1.1"
 hyper = "1.4"
 lazy_static = "1.5"
 log = "0.4"
+pin-project-lite = "0.2"
 prometheus = "0.13"
 rustls-pemfile = { version = "2.1", optional = true }
 tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
 tokio-rustls = { version = "0.26", optional = true }
 tokio-stream = { version = "0.1", features = ["signal"] }
+topological-sort = "0.2.2"
+try-lock = "0.2"
 
 [features]
 tls = ["axum-server/tls-rustls", "dep:arc-swap", "dep:tokio-rustls", "dep:rustls-pemfile"]
