--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ log = "0.4"
 pin-project-lite = "0.2"
 prometheus = "0.13"
 rustls-pemfile = { version = "2.1", optional = true }
+slice-dst = "1.6.0"
 tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
 tokio-rustls = { version = "0.26", optional = true }
 tokio-stream = { version = "0.1", features = ["signal"] }
