--- a/comprehensive_macros/Cargo.toml
+++ b/comprehensive_macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_macros"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -18,4 +18,4 @@ proc-macro = true
 convert_case = "0.7"
 proc-macro2 = "1.0"
 quote = "1.0"
-syn = "2.0"
+syn = { version = "2.0", features = ["full"] }
