--- a/comprehensive_dns/Cargo.toml
+++ b/comprehensive_dns/Cargo.toml
@@ -12,5 +12,5 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-comprehensive = { path = "..", version = "0.5" }
+comprehensive = { path = "../comprehensive", version = "0.5" }
 trust-dns-resolver = "0.23"
