--- a/comprehensive_s3/Cargo.toml
+++ b/comprehensive_s3/Cargo.toml
@@ -13,7 +13,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
-comprehensive = { path = "..", version = "0.5" }
+comprehensive = { path = "../comprehensive", version = "0.5" }
 const_format = "0.2"
 futures = "0.3"
 gensym = "0.1"
