Split comprehensive_http to its own crate.
It's better for disruptivity of version bumps if the main
'comprehensive' crate contains as little as possible beyond the Assembly
and Resource traits.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "comprehensive",
   "comprehensive_dns",
   "comprehensive_grpc",
+  "comprehensive_http",
   "comprehensive_macros",
   "comprehensive_s3",
   "examples",
