--- a/comprehensive_grpc/Cargo.toml
+++ b/comprehensive_grpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_grpc"
-version = "0.6.1"
+version = "0.6.2"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -15,7 +15,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 atomic-take = "1.1"
 clap = { version = "4.5", features = ["derive"] }
 clap_builder = { version = "4.5", features = ["string"] }
-comprehensive = { path = "../comprehensive", version = "0.5.1" }
+comprehensive = { path = "../comprehensive", version = "0.6" }
 comprehensive_dns = { path = "../comprehensive_dns", version = "0.1" }
 comprehensive_macros = { path = "../comprehensive_macros", version = "0.4.5" }
 futures = "0.3"
@@ -42,6 +42,7 @@ tls = ["comprehensive/tls", "comprehensive/unreloadable_tls", "tonic/tls", "warm
 tonic-build = "0.12"
 
 [dev-dependencies]
+comprehensive_http = { path = "../comprehensive_http", version = "0.1" }
 http-body-util = "0.1"
 rand = "0.8"
 test-log = "0.2"
