--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -15,8 +15,9 @@ path = "src/helloworld-grpc-client.rs"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
-comprehensive = { path = "../comprehensive", version = "0.5", features = ["tls"] }
+comprehensive = { path = "../comprehensive", version = "0.6" }
 comprehensive_grpc = { path = "../comprehensive_grpc", version = "0.6", features = ["tls"] }
+comprehensive_http = { path = "../comprehensive_http", version = "0.1", features = ["tls"] }
 env_logger = "0.10"
 humantime = "2.1"
 prost = "0.13"
