Make warm_channels channel diagnostics automatically available

--- a/comprehensive_grpc/Cargo.toml
+++ b/comprehensive_grpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_grpc"
-version = "0.6.2"
+version = "0.6.3"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -18,6 +18,7 @@ clap_builder = { version = "4.5", features = ["string"] }
 comprehensive = { path = "../comprehensive", version = "0.6" }
 comprehensive_dns = { path = "../comprehensive_dns", version = "0.1" }
 comprehensive_macros = { path = "../comprehensive_macros", version = "0.4.5" }
+comprehensive_warm_channels = { path = "../comprehensive_warm_channels", version = "0.1" }
 futures = "0.3"
 http = "1.1"
 humantime = "2.1"
