--- a/comprehensive_warm_channels/Cargo.toml
+++ b/comprehensive_warm_channels/Cargo.toml
@@ -1,36 +1,23 @@
 [package]
-name = "comprehensive_http"
-version = "0.1.1"
+name = "comprehensive_warm_channels"
+version = "0.1.0"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
 description = "A harness for creating consistently-shaped servers will less boilerplate"
 license = "MIT"
-autoexamples = false
 
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-axum = "0.7"
-axum-server = "0.7"
+axum-core = "0.4"
 clap = { version = "4.5", features = ["derive"] }
 comprehensive = { path = "../comprehensive", version = "0.6" }
-comprehensive_macros = { path = "../comprehensive_macros", version = "0.4.6" }
 comprehensive_traits = { path = "../comprehensive_traits", version = "0.1", features = ["http_diag"] }
-futures = "0.3"
 http = "1.1"
-hyper = "1.4"
-log = "0.4"
-prometheus = "0.13"
-tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
-tokio-rustls = { version = "0.26", optional = true }
-
-[features]
-tls = ["axum-server/tls-rustls", "comprehensive/tls", "dep:tokio-rustls"]
-
-[dev-dependencies]
-rand = "0.8"
-reqwest = "0.12"
+pin-project-lite = "0.2"
+tower = "0.5"
 tower-service = "0.3"
+warm_channels = { version = "0.1.3", features = ["diag"] }
