--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ members = [
   "comprehensive_http",
   "comprehensive_macros",
   "comprehensive_s3",
+  "comprehensive_traits",
+  "comprehensive_warm_channels",
   "examples",
 ]
