--- a/comprehensive_grpc/Cargo.toml
+++ b/comprehensive_grpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_grpc"
-version = "0.6.3"
+version = "0.6.4"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -15,10 +15,11 @@ rustdoc-args = ["--cfg", "docsrs"]
 atomic-take = "1.1"
 clap = { version = "4.5", features = ["derive"] }
 clap_builder = { version = "4.5", features = ["string"] }
-comprehensive = { path = "../comprehensive", version = "0.6.1" }
+comprehensive = { path = "../comprehensive", version = "0.7" }
 comprehensive_dns = { path = "../comprehensive_dns", version = "0.1" }
 comprehensive_macros = { path = "../comprehensive_macros", version = "0.4.5" }
-comprehensive_warm_channels = { path = "../comprehensive_warm_channels", version = "0.1" }
+comprehensive_tls = { path = "../comprehensive_tls", version = "0.1", optional = true }
+comprehensive_warm_channels = { path = "../comprehensive_warm_channels", version = "0.1.1" }
 futures = "0.3"
 http = "1.1"
 humantime = "2.1"
@@ -37,7 +38,7 @@ tower-layer = "0.3"
 warm_channels = { version = "0.1", features = ["grpc", "metrics"] }
 
 [features]
-tls = ["comprehensive/tls", "comprehensive/unreloadable_tls", "tonic/tls", "warm_channels/tls"]
+tls = ["comprehensive_tls/unreloadable_tls", "dep:comprehensive_tls", "tonic/tls", "warm_channels/tls"]
 
 [build-dependencies]
 tonic-build = "0.12"
