--- a/comprehensive_tls/Cargo.toml
+++ b/comprehensive_tls/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "comprehensive_s3"
-version = "0.1.2"
+name = "comprehensive_tls"
+version = "0.1.0"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -12,11 +12,17 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
+arc-swap = "1.7"
 clap = { version = "4.5", features = ["derive"] }
 comprehensive = { path = "../comprehensive", version = "0.7" }
-const_format = "0.2"
-futures = "0.3"
-gensym = "0.1"
 log = "0.4"
-rust-s3 = "0.35"
+rustls-pemfile = "2.1"
+thiserror = "2.0.12"
 tokio = "1.40"
+tokio-rustls = "0.26"
+
+[features]
+unreloadable_tls = []
+
+[dev-dependencies]
+tempfile = "3"
