--- a/comprehensive/Cargo.toml
+++ b/comprehensive/Cargo.toml
@@ -18,6 +18,7 @@ boxcar = "0.2"
 clap = { version = "4.5", features = ["derive"] }
 comprehensive_macros = { path = "../comprehensive_macros", version = "0.4.7" }
 delegate = "0.13.3"
+either = "1.15.0"
 fixedbitset = "0.5.7"
 futures = "0.3"
 lazy_static = "1.5"
