--- a/comprehensive_dns/Cargo.toml
+++ b/comprehensive_dns/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_dns"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -13,4 +13,4 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 comprehensive = { path = "../comprehensive", version = "0.7" }
-trust-dns-resolver = "0.23"
+hickory-resolver = { version = "0.25", features = ["system-config", "tokio"] }
