--- a/comprehensive_tls/Cargo.toml
+++ b/comprehensive_tls/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_tls"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -13,16 +13,20 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 arc-swap = "1.7"
+async-stream = "0.3"
 clap = { version = "4.5", features = ["derive"] }
-comprehensive = { path = "../comprehensive", version = "0.7" }
+comprehensive = { path = "../comprehensive", version = "0.7.1" }
+comprehensive_traits = { path = "../comprehensive_traits", version = "0.1.2", features = ["tls_config"] }
+futures = "0.3"
 log = "0.4"
+pem-rfc7468 = { version = "0.7.0", optional = true }
 rustls-pemfile = "2.1"
 thiserror = "2.0.12"
 tokio = "1.40"
 tokio-rustls = "0.26"
 
 [features]
-unreloadable_tls = []
+unreloadable_tls = ["dep:pem-rfc7468", "pem-rfc7468/std"]
 
 [dev-dependencies]
 futures = "0.3"
