--- a/comprehensive_tls/Cargo.toml
+++ b/comprehensive_tls/Cargo.toml
@@ -17,6 +17,7 @@ async-stream = "0.3"
 clap = { version = "4.5", features = ["derive"] }
 comprehensive = { path = "../comprehensive", version = "0.7.1" }
 comprehensive_traits = { path = "../comprehensive_traits", version = "0.1.2", features = ["tls_config"] }
+delegate = "0.13.3"
 futures = "0.3"
 log = "0.4"
 pem-rfc7468 = { version = "0.7.0", optional = true }
@@ -31,4 +32,5 @@ unreloadable_tls = ["dep:pem-rfc7468", "pem-rfc7468/std"]
 [dev-dependencies]
 futures = "0.3"
 tempfile = "3"
+tokio = { version = "1.40", features = ["io-util"] }
 tokio-test = "0.4"
