--- a/comprehensive_http/Cargo.toml
+++ b/comprehensive_http/Cargo.toml
@@ -25,6 +25,7 @@ http = "1.1"
 hyper = "1.4"
 log = "0.4"
 prometheus = "0.13"
+thiserror = "2.0.12"
 tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
 tokio-rustls = { version = "0.26", optional = true }
 
