--- a/comprehensive_spiffe/Cargo.toml
+++ b/comprehensive_spiffe/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_spiffe"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -14,16 +14,21 @@ rustdoc-args = ["--cfg", "docsrs"]
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 comprehensive = { path = "../comprehensive", version = "0.7.1" }
-comprehensive_grpc = { path = "../comprehensive_grpc", version = "0.6.7" }
-comprehensive_traits = { path = "../comprehensive_traits", version = "0.1.2", features = ["tls_config"] }
+comprehensive_grpc = { path = "../comprehensive_grpc", version = "0.7.0" }
+comprehensive_tls = { path = "../comprehensive_tls", version = "0.3.0", default-features = false }
 futures = "0.3"
+http = "1.3.1"
+itertools = "0.14.0"
 log = "0.4"
 prost = "0.13"
 prost-types = "0.13.5"
-rustls-pki-types = "1.12"
+rustls-webpki = "0.103.3"
 thiserror = "2.0.12"
 tonic = "0.12"
-x509-parser = "0.17.0"
 
 [build-dependencies]
 tonic-build = "0.12"
+
+[dev-dependencies]
+hex-literal = "1.0.0"
+tokio = "1.40"
