--- a/comprehensive_spiffe/Cargo.toml
+++ b/comprehensive_spiffe/Cargo.toml
@@ -12,6 +12,7 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
+backoff = "0.4.0"
 clap = { version = "4.5", features = ["derive"] }
 comprehensive = { path = "../comprehensive", version = "0.7.1" }
 comprehensive_grpc = { path = "../comprehensive_grpc", version = "0.7.0" }
@@ -24,6 +25,7 @@ prost = "0.13"
 prost-types = "0.13.5"
 rustls-webpki = "0.103.3"
 thiserror = "2.0.12"
+tokio = { version = "1.40", features = ["time"] }
 tonic = "0.12"
 
 [build-dependencies]
