--- a/comprehensive_tls/Cargo.toml
+++ b/comprehensive_tls/Cargo.toml
@@ -14,24 +14,26 @@ rustdoc-args = ["--cfg", "docsrs"]
 [dependencies]
 arc-swap = { version = "1.7", optional = true }
 async-stream = { version = "0.3", optional = true }
-atomic-take = { version = "1.1.0", optional = true }
 boxcar = { version = "0.2", optional = true }
 clap = { version = "4.5", features = ["derive"], optional = true }
 comprehensive = { path = "../comprehensive", version = "0.7.1" }
 futures = "0.3"
 http = "1.3.1"
 log = "0.4"
+pin-project-lite = { version = "0.2", optional = true }
 rustls = "0.23"
 rustls-pemfile = { version = "2.1", optional = true }
 rustls-pki-types = "1.12"
 rustls-webpki = { version = "0.103.3", optional = true }
+slice-dst = { version = "1.6.0", optional = true }
 thiserror = { version = "2.0.12", optional = true }
+time = "0.3.41"
 tokio = { version = "1.40", optional = true }
 x509-parser = "0.17.0"
 
 [features]
 default = ["dispatch", "files"]
-dispatch = ["dep:arc-swap", "dep:atomic-take", "dep:boxcar", "dep:clap", "dep:thiserror"]
+dispatch = ["dep:arc-swap", "dep:boxcar", "dep:clap", "dep:pin-project-lite", "dep:slice-dst", "dep:thiserror"]
 files = ["dep:async-stream", "dep:clap", "dep:rustls-pemfile", "dep:rustls-webpki", "dep:thiserror", "dep:tokio"]
 
 [dev-dependencies]
