--- a/comprehensive_spiffe/Cargo.toml
+++ b/comprehensive_spiffe/Cargo.toml
@@ -18,6 +18,7 @@ comprehensive = { path = "../comprehensive", version = "0.7.1" }
 comprehensive_grpc = { path = "../comprehensive_grpc", version = "0.7.0" }
 comprehensive_tls = { path = "../comprehensive_tls", version = "0.3.0", default-features = false }
 futures = "0.3"
+html-escape = "0.2.13"
 http = "1.3.1"
 itertools = "0.14.0"
 log = "0.4"
