--- a/comprehensive_tls/Cargo.toml
+++ b/comprehensive_tls/Cargo.toml
@@ -14,10 +14,13 @@ rustdoc-args = ["--cfg", "docsrs"]
 [dependencies]
 arc-swap = { version = "1.7", optional = true }
 async-stream = { version = "0.3", optional = true }
+axum-core = { version = "0.4", optional = true }
 boxcar = { version = "0.2", optional = true }
 clap = { version = "4.5", features = ["derive"], optional = true }
 comprehensive = { path = "../comprehensive", version = "0.7.1" }
+comprehensive_traits = { path = "../comprehensive_traits", version = "0.2.0", optional = true }
 futures = "0.3"
+html-escape = { version = "0.2.13", optional = true }
 http = "1.3.1"
 log = "0.4"
 pin-project-lite = { version = "0.2", optional = true }
@@ -29,12 +32,15 @@ slice-dst = { version = "1.6.0", optional = true }
 thiserror = { version = "2.0.12", optional = true }
 time = "0.3.41"
 tokio = { version = "1.40", optional = true }
+tower = {version = "0.5", optional = true }
+tower-service = {version = "0.3", optional = true }
 x509-parser = "0.17.0"
 
 [features]
-default = ["dispatch", "files"]
+default = ["diag", "dispatch", "files"]
+diag = ["comprehensive_traits/http_diag", "dep:async-stream", "dep:axum-core", "dep:clap", "dep:comprehensive_traits", "dep:tower", "dep:tower-service", "dispatch"]
 dispatch = ["dep:arc-swap", "dep:boxcar", "dep:clap", "dep:pin-project-lite", "dep:slice-dst", "dep:thiserror"]
-files = ["dep:async-stream", "dep:clap", "dep:rustls-pemfile", "dep:rustls-webpki", "dep:thiserror", "dep:tokio"]
+files = ["dep:async-stream", "dep:clap", "dep:html-escape", "dep:rustls-pemfile", "dep:rustls-webpki", "dep:thiserror", "dep:tokio"]
 
 [dev-dependencies]
 futures = "0.3"
