--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -18,6 +18,7 @@ clap = { version = "4.5", features = ["derive"] }
 comprehensive = { path = "../comprehensive", version = "0.7" }
 comprehensive_grpc = { path = "../comprehensive_grpc", version = "0.7", features = ["tls"] }
 comprehensive_http = { path = "../comprehensive_http", version = "0.2", features = ["tls"] }
+comprehensive_spiffe = { path = "../comprehensive_spiffe", version = "0.2.1" }
 env_logger = "0.10"
 humantime = "2.1"
 prost = "0.13"
