Experimentally split Routes and Listener logic from gRPC server.
The insecure and secure gRPC servers are broken into 2 precursor
Resources for creating the Routes and TLS/TCP/IP listener plus the
existing server Resource that puts those together with tower::Layers.
This enables a custom gRPC server to be built by replacing the top
resource while still using both precursors.

The new precursor resources are only exposed behind an 'experimental'
feature flag because this API is not great and is subject to change.
In particular it's not clear what should happen when more than one
other resource tries to consume the gRPC listener. Currently the
first consumer wins and the others get None. I am only making this
change right now in order to build experience with some of the
other recent Comprehensive changes using a server that currently
requires a custom layer (for a RPC ACL).

--- a/comprehensive_grpc/Cargo.toml
+++ b/comprehensive_grpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_grpc"
-version = "0.7.0"
+version = "0.7.1"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -31,7 +31,7 @@ prost-types = "0.13"
 thiserror = "2.0.12"
 tokio = "1.40"
 tokio-rustls = { version = "0.26", optional = true }
-tokio-stream = { version = "0.1", optional = true }
+tokio-stream = "0.1"
 tonic = "0.12"
 tonic-health = "0.12"
 tonic-reflection = "0.12"
@@ -42,7 +42,8 @@ tower-service = "0.3.3"
 warm_channels = { version = "0.2", features = ["grpc", "metrics"] }
 
 [features]
-tls = ["dep:comprehensive_tls", "dep:pin-project-lite", "dep:tokio-rustls", "dep:tokio-stream", "tonic/tls", "warm_channels/tls"]
+experimental = []
+tls = ["dep:comprehensive_tls", "dep:pin-project-lite", "dep:tokio-rustls", "tonic/tls", "warm_channels/tls"]
 
 [build-dependencies]
 tonic-build = "0.12"
