--- a/comprehensive/Cargo.toml
+++ b/comprehensive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive"
-version = "0.7.4"
+version = "0.8.0"
 edition = "2024"
 rust-version = "1.86"
 repository = "https://github.com/vandry/comprehensive.git"
@@ -16,13 +16,14 @@ rustdoc-args = ["--cfg", "docsrs"]
 [dependencies]
 boxcar = "0.2"
 clap = { version = "4.5", features = ["derive"] }
-comprehensive_macros = { path = "../comprehensive_macros", version = "0.4.8" }
+comprehensive_macros = { path = "../comprehensive_macros", version = "0.5" }
 delegate = "0.13.3"
 either = "1.15.0"
 fixedbitset = "0.5.7"
 futures = "0.3"
 lazy_static = "1.5"
 log = "0.4"
+paste = "1.0.15"
 pin-project-lite = "0.2"
 prometheus = "0.13"
 rustls-pemfile = { version = "2.1", optional = true }
