--- a/comprehensive/Cargo.toml
+++ b/comprehensive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive"
-version = "0.8.0"
+version = "0.8.1"
 edition = "2024"
 rust-version = "1.86"
 repository = "https://github.com/vandry/comprehensive.git"
@@ -22,7 +22,6 @@ either = "1.15.0"
 fixedbitset = "0.5.7"
 futures = "0.3"
 lazy_static = "1.5"
-log = "0.4"
 paste = "1.0.15"
 pin-project-lite = "0.2"
 prometheus = "0.13"
@@ -31,6 +30,7 @@ slice-dst = "1.6.0"
 tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
 tokio-stream = { version = "0.1", features = ["signal"] }
 topological-sort = "0.2.2"
+tracing = "0.1.41"
 try-lock = "0.2"
 
 [dev-dependencies]
