--- a/comprehensive_http/Cargo.toml
+++ b/comprehensive_http/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_http"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -23,10 +23,12 @@ comprehensive_traits = { path = "../comprehensive_traits", version = "0.2", feat
 futures = "0.3"
 http = "1.1"
 hyper = "1.4"
-log = "0.4"
+pin-project-lite = "0.2.16"
 prometheus = "0.13"
 thiserror = "2.0.12"
 tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
+tower-service = "0.3"
+tracing = "0.1.41"
 
 [features]
 tls = ["axum-server/tls-rustls", "dep:comprehensive_tls"]
@@ -34,4 +36,3 @@ tls = ["axum-server/tls-rustls", "dep:comprehensive_tls"]
 [dev-dependencies]
 rand = "0.9"
 reqwest = "0.12"
-tower-service = "0.3"
