--- a/comprehensive_spiffe/Cargo.toml
+++ b/comprehensive_spiffe/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_spiffe"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -21,7 +21,6 @@ futures = "0.3"
 html-escape = "0.2.13"
 http = "1.3.1"
 itertools = "0.14.0"
-log = "0.4"
 prost = "0.13"
 prost-types = "0.13.5"
 rustls-webpki = "0.103.3"
@@ -29,6 +28,7 @@ thiserror = "2.0.12"
 time = "0.3.41"
 tokio = { version = "1.40", features = ["time"] }
 tonic = "0.12"
+tracing = "0.1.41"
 
 [build-dependencies]
 tonic-build = "0.12"
