--- a/comprehensive_tls/Cargo.toml
+++ b/comprehensive_tls/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_tls"
-version = "0.4.0"
+version = "0.4.1"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -23,7 +23,6 @@ futures = "0.3"
 html-escape = { version = "0.2.13", optional = true }
 http = "1.3.1"
 lazy_static = { version = "1.5", optional = true }
-log = "0.4"
 num = { version = "0.4.3", optional = true, default-features = false }
 pin-project-lite = { version = "0.2", optional = true }
 prometheus = { version = "0.13", optional = true }
@@ -37,6 +36,7 @@ time = "0.3.41"
 tokio = { version = "1.40", optional = true }
 tower = {version = "0.5", optional = true }
 tower-service = {version = "0.3", optional = true }
+tracing = "0.1.41"
 x509-parser = "0.18.0"
 
 [features]
