--- a/comprehensive_grpc/Cargo.toml
+++ b/comprehensive_grpc/Cargo.toml
@@ -23,7 +23,7 @@ comprehensive_warm_channels = { path = "../comprehensive_warm_channels", version
 futures = "0.3"
 http = "1.1"
 humantime = "2.1"
-pin-project-lite = { version = "0.2", optional = true }
+pin-project-lite = "0.2"
 prometheus = "0.13"
 prost = "0.13"
 prost-types = "0.13"
@@ -43,7 +43,7 @@ warm_channels = { version = "0.2", features = ["grpc", "metrics"] }
 
 [features]
 experimental = []
-tls = ["dep:comprehensive_tls", "dep:pin-project-lite", "dep:tokio-rustls", "tonic/tls", "warm_channels/tls"]
+tls = ["dep:comprehensive_tls", "dep:tokio-rustls", "tonic/tls", "warm_channels/tls"]
 
 [build-dependencies]
 tonic-build = "0.12"
