--- a/comprehensive_warm_channels/Cargo.toml
+++ b/comprehensive_warm_channels/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_warm_channels"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -14,10 +14,15 @@ rustdoc-args = ["--cfg", "docsrs"]
 [dependencies]
 axum-core = "0.4"
 clap = { version = "4.5", features = ["derive"] }
-comprehensive = { path = "../comprehensive", version = "0.8" }
+comprehensive = { path = "../comprehensive", version = "0.9" }
 comprehensive_traits = { path = "../comprehensive_traits", version = "0.2", features = ["http_diag"] }
 http = "1.1"
 pin-project-lite = "0.2"
 tower = "0.5"
 tower-service = "0.3"
-warm_channels = { version = "0.2", features = ["diag"] }
+warm_channels = { version = "0.3", features = ["diag"] }
+
+[features]
+grpc = ["warm_channels/grpc"]
+metrics = ["warm_channels/metrics"]
+tls = ["warm_channels/tls"]
