--- a/comprehensive_grpc/Cargo.toml
+++ b/comprehensive_grpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_grpc"
-version = "0.9.0"
+version = "0.9.1"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -13,15 +13,17 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 atomic-take = "1.1"
+bytes = "1.10.1"
 clap = { version = "4.5", features = ["derive"] }
 clap_builder = { version = "4.5", features = ["string"] }
-comprehensive = { path = "../comprehensive", version = "0.9" }
+comprehensive = { path = "../comprehensive", version = "0.9.1" }
 comprehensive_dns = { path = "../comprehensive_dns", version = "0.4" }
 comprehensive_macros = { path = "../comprehensive_macros", version = "0.5" }
 comprehensive_tls = { path = "../comprehensive_tls", version = "0.5", optional = true }
 comprehensive_warm_channels = { path = "../comprehensive_warm_channels", version = "0.5", features = ["grpc", "metrics"] }
 futures = "0.3"
 http = "1.1"
+http-body = "1.0.1"
 humantime = "2.1"
 pin-project-lite = "0.2"
 prometheus = "0.14.0"
@@ -41,7 +43,6 @@ tower-service = "0.3.3"
 tracing = "0.1.41"
 
 [features]
-experimental = []
 tls = ["dep:comprehensive_tls", "dep:tokio-rustls", "tonic/tls-aws-lc", "comprehensive_warm_channels/tls"]
 
 [build-dependencies]
