--- a/comprehensive_grpc/Cargo.toml
+++ b/comprehensive_grpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_grpc"
-version = "0.9.1"
+version = "0.9.2"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -19,8 +19,8 @@ clap_builder = { version = "4.5", features = ["string"] }
 comprehensive = { path = "../comprehensive", version = "0.9.1" }
 comprehensive_dns = { path = "../comprehensive_dns", version = "0.4" }
 comprehensive_macros = { path = "../comprehensive_macros", version = "0.5" }
-comprehensive_tls = { path = "../comprehensive_tls", version = "0.5", optional = true }
-comprehensive_warm_channels = { path = "../comprehensive_warm_channels", version = "0.5", features = ["grpc", "metrics"] }
+comprehensive_tls = { path = "../comprehensive_tls", version = "<0.7, >=0.5", optional = true }
+comprehensive_warm_channels = { path = "../comprehensive_warm_channels", version = "<0.7, >=0.5", features = ["grpc", "metrics"] }
 futures = "0.3"
 http = "1.1"
 http-body = "1.0.1"
@@ -49,7 +49,7 @@ tls = ["dep:comprehensive_tls", "dep:tokio-rustls", "tonic/tls-aws-lc", "compreh
 tonic-prost-build = "0.14.2"
 
 [dev-dependencies]
-comprehensive_http = { path = "../comprehensive_http", version = "0.4" }
+comprehensive_http = { path = "../comprehensive_http", version = "0.5" }
 delegate = "0.13.3"
 http-body-util = "0.1"
 hyper-util = "0.1.14"
