--- a/comprehensive_tls/Cargo.toml
+++ b/comprehensive_tls/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comprehensive_tls"
-version = "0.5.0"
+version = "0.6.0"
 edition = "2024"
 repository = "https://github.com/vandry/comprehensive.git"
 homepage = "https://github.com/vandry/comprehensive"
@@ -14,11 +14,10 @@ rustdoc-args = ["--cfg", "docsrs"]
 [dependencies]
 arc-swap = { version = "1.7", optional = true }
 async-stream = { version = "0.3", optional = true }
-axum-core = { version = "0.4", optional = true }
 boxcar = { version = "0.2", optional = true }
 clap = { version = "4.5", features = ["derive"], optional = true }
 comprehensive = { path = "../comprehensive", version = "0.9" }
-comprehensive_traits = { path = "../comprehensive_traits", version = "0.2.0", optional = true }
+comprehensive_traits = { path = "../comprehensive_traits", version = "0.3.0", optional = true }
 futures = "0.3"
 html-escape = { version = "0.2.13", optional = true }
 http = "1.3.1"
@@ -41,7 +40,7 @@ x509-parser = "0.18.0"
 
 [features]
 default = ["diag", "dispatch", "files", "metrics"]
-diag = ["comprehensive_traits/http_diag", "dep:async-stream", "dep:axum-core", "dep:clap", "dep:comprehensive_traits", "dep:tower", "dep:tower-service", "dispatch"]
+diag = ["comprehensive_traits/http_diag", "dep:async-stream", "dep:clap", "dep:comprehensive_traits", "dep:tower", "dep:tower-service", "dispatch"]
 dispatch = ["dep:arc-swap", "dep:boxcar", "dep:clap", "dep:pin-project-lite", "dep:slice-dst", "dep:thiserror"]
 files = ["dep:async-stream", "dep:clap", "dep:html-escape", "dep:rustls-pemfile", "dep:rustls-webpki", "dep:thiserror", "dep:tokio"]
 metrics = ["dep:lazy_static", "dep:num", "dep:prometheus"]
